Test runs successful

--- a/datasets/postprocess_to_recommend.ipynb
+++ b/datasets/postprocess_to_recommend.ipynb
@@ -82,8 +82,7 @@
     "\n",
     "# User defined python classes and files\n",
     "import sys\n",
-    "sys.path.insert(0, '/Users/maitreyeesharma/WORKSPACE/PostDoc/EngChem/MatDisc_ML/python_notebook_bo/')\n",
-    "sys.path.insert(0, '/Users/maitreyeesharma/WORKSPACE/PostDoc/EngChem/MatDisc_ML/feature_engineering/')\n",
+    "sys.path.insert(0, '../scripts/')\n",
     "\n",
     "import input_class \n",
     "import code_verification as verification\n",
